# blood-culture-outcome-classification

./: .gitignore  CONTRIBUTING.md  METHODS.md  README.md  clean.py  config.json  pyproject.toml
.github/workflows/: tests.yml
dataset_examples/: testing_data.csv  training_data.csv
exports/: dt_rules_CBC_DIFF_1_boruta.json  dt_rules_CBC_DIFF_1_boruta.txt  dt_rules_CBC_DIFF_CPD_1_boruta.json  dt_rules_CBC_DIFF_CPD_1_boruta.txt  lr_coeffs_CBC_DIFF_1_boruta.csv  lr_coeffs_CBC_DIFF_CPD_1_boruta.csv
features/: dt_CBC_DIFF_1_boruta.txt  dt_CBC_DIFF_CPD_1_boruta.txt
notebooks/: Using_Exported_Models_for_Inference.ipynb
python_scripts/: __init__.py  inference.py  reporting.py  training.py  training_utils.py
tests/: __init__.py  conftest.py  test_pipeline.py
